GpuVideoDecoder now propagates errors during Flush()

Previously it was possible for GVD to be processing a Flush() but not
have no outstanding bitstream buffers in the VDA when it received a
NotifyError(). For example, when decoding single frame videos. In that
case it went into the error state but never propagated the error. Now,
if an error is received while in the flushing state, the error is
propagated by calling the decode cb corresponding to the EOS buffer.

BUG=647081
TEST=manually verified that AVDA decode errors now propagate to WMPI

Review-Url: https://codereview.chromium.org/2344703003
Cr-Commit-Position: refs/heads/master@{#419001}

Former-commit-id: 99d991f6f7c0f480c0a5d8b2165daebe01cd25d5